--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@ title: Speanet.info
                         <h3>
                             <a href="{{ post.url }}">{{ post.title }} </a>
                             <small>{{ post.date | date: "%B %e, %Y" }} - Category: {{ post.category }} -
-                                {% for tag in post.tags %}
-                                <a href="/tags/{{ tag }}" class="counter" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
-                                {% if forloop.last != true %}
-                                {% endif %}
-                                {% endfor %}
+                                {% assign tags_list = post.tags %}
+                                {% include JB/tags_list %}
                             </small>
                         </h3>
                         <p>{{ post.summary }}</p>
