--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Speanet.info
             <address class="contact">
                 Windscheidstraße 9 <i class="icon-home"></i><br />
                 10627 Berlin <i class="icon-map-marker"></i><br />
-                <a href="http://speanet.info">speanet.info</a> <i class="icon-globe"></i><br />
+                <a href="http://blog.speanet.info">blog.speanet.info</a> <i class="icon-globe"></i><br />
                 <a href="mailto:martin.parsiegla@gmail.com">martin.parsiegla@gmail.com</a> <i class="icon-envelope"></i>
             </address>
             <ul class="list-unstyled list-inline">
