--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ title: Speanet.info
             </div>
 
             <address class="contact">
-                Windscheidstraße 9 <i class="icon-home"></i><br />
-                10627 Berlin <i class="icon-map-marker"></i><br />
+                Bismarckstraße 25 <i class="icon-home"></i><br />
+                10625 Berlin <i class="icon-map-marker"></i><br />
                 <a href="http://blog.speanet.info">blog.speanet.info</a> <i class="icon-globe"></i><br />
                 <a href="mailto:martin.parsiegla@gmail.com">martin.parsiegla@gmail.com</a> <i class="icon-envelope"></i>
             </address>
