Adjust contact information

--- a/about.html
+++ b/about.html
@@ -4,15 +4,14 @@ title: About me
 ---
 
 <h1>
-    Martin Parsiegla
-    <small>(Spea)</small>
+    Martin P.
 </h1>
 <div>
     <p>
         Hi there! My name is Martin also known as <em>Spea</em>.
     </p>
     <p>
-        I'm a software engineer in Berlin working for <a href="https://www.rebuy.de">reBuy reCommerce GmbH</a>.
+        I'm a software engineer in Berlin working for <a href="https://www.rebuy.de">rebuy reCommerce GmbH</a>.
     </p>
     <p>
         My focus is mostly PHP (see <a href="/projects.html">my projects</a>), but of course I also have experience in Java, C#, Typescript and
@@ -25,10 +24,7 @@ title: About me
         If you want to contact me, you can do this in one of the following ways:
         </p>
         <ul>
-            <li>Email: <a href="mailto:martin.parsiegla@gmail.com">martin.parsiegla@gmail.com</a></li>
-            <li>Twitter: <a href="https://twitter.com/Schpea">Schpea</a></li>
-            <li>Slack: Spea @ <a href="https://symfony-devs.slack.com">symfony-devs.slack.com</a></li>
-            <li>IRC: Spea @ ##php and #symfony on freenode</li>
+            <li>Email: <a href="mailto:contact@speanet.info">contact@speanet.info</a></li>
         </ul>
     </div>
 </div>
